<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".presentation.RestaurantActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="200dp">

            <ImageView
                android:id="@+id/Restbg"
                android:layout_width="match_parent"
                android:layout_height="150dp" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/comment_Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top|end"
                android:layout_margin="@dimen/cardview_default_radius"
                android:src="@drawable/baseline_comment_56"
                app:fabSize="normal"
                app:maxImageSize="35dp" />

            <Button
                android:id="@+id/ViewCartButtonXML"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#363C45"
                android:backgroundTint="@color/teal_200"
                android:layout_gravity="bottom"
                android:text="View Cart" />
        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/RestName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="30dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/RestDes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/RestLoca"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/RestServ"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"
                android:textColor="@color/black"
                android:textSize="18dp" />

            <TextView
                android:id="@+id/RestHours"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="18dp" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/MenuRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>

    <FrameLayout
        android:id="@+id/commentContainer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="bottom"
        android:animateLayoutChanges="true"
        android:background="@color/white"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="Comments:"
            android:textColor="@color/black"
            android:textSize="30dp" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="50dp"
            android:fillViewport="true"
            android:scrollbars="vertical">

            <TextView
                android:id="@+id/commentSection"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </ScrollView>

        <EditText
            android:id="@+id/inputComment"
            android:layout_width="500dp"
            android:layout_height="50dp"
            android:layout_gravity="bottom"
            android:background="@color/white"
            android:elevation="2dp"
            android:hint="Enter Comment here...."
            android:inputType="text"
            android:maxLength="75"
            android:maxLines="1" />

        <Button
            android:id="@+id/sendComment"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_gravity="bottom|end"
            android:backgroundTint="@color/teal_200"
            android:textColor="#363C45"
            android:hint="Send" />
    </FrameLayout>
</FrameLayout>