<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:id="@+id/addAddressSubmit"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/postalInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/provinceInput"
        android:layout_marginTop="1dp"
        android:hint="Postal Code:"
        android:maxLength="15" />

    <EditText
        android:id="@+id/provinceInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/cityInput"
        android:layout_marginTop="1dp"
        android:hint="Province:"
        android:maxLength="20" />

    <EditText
        android:id="@+id/cityInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/streetInput"
        android:hint="City:"
        android:maxLength="20" />

    <EditText
        android:id="@+id/streetInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Street:"
        android:maxLength="20" />

</RelativeLayout>