...

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <TextView
            android:id="@+id/infoContainer"
            android:layout_width="511dp"
            android:layout_height="227dp"
            android:layout_marginStart="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="50dp"
...
            android:backgroundTint="@color/teal_200"
            android:text="Gift card"
            android:textColor="#363C45"
            android:textSize="20dp" />

        <Button
            android:id="@+id/addCardButton"
            android:layout_width="277dp"
            android:layout_height="116dp"
            android:layout_gravity="center|start"
            android:layout_margin="20dp"
            android:backgroundTint="@color/teal_200"
            android:text="Add Credit Card"
            android:textColor="#363C45"
            android:textSize="20dp" />

        <Button
            android:id="@+id/addAddressButton"
            android:layout_width="267dp"
            android:layout_height="116dp"
            android:layout_gravity="center|end"
            android:layout_margin="20dp"
            android:backgroundTint="@color/teal_200"
            android:text="Add address"
...
