...

    <item
        android:id="@+id/home"
        android:title="Home"
        android:icon="@drawable/round_home_24"/>
    <item
        android:id="@+id/user_account"
        android:title="User"
        android:icon="@drawable/round_people_24"/>
    <item
        android:id="@+id/customer_support"
        android:title="Support"
        android:icon="@drawable/baseline_help_24"/>
...
