<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/cardNumberInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Credit Card Number"
        android:inputType="number"
        android:maxLength="20" />

    <EditText
        android:id="@+id/cardCvcInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cardNumberInput"
        android:hint="Cvc"
        android:inputType="number"
        android:maxLength="20" />

    <EditText
        android:id="@+id/cardExpiryInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cardCvcInput"
        android:hint="Expiry"
        android:maxLength="20" />
</RelativeLayout>